[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aic-vllm-proxy"
version = "0.1.0"
description = "FastAPI proxy that starts/stops vLLM serve and forwards OpenAI-compatible requests."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jan Drchal" }]

dependencies = [
  "fastapi>=0.110",
  "httpx>=0.25",
]

[project.optional-dependencies]
server = [
  "uvicorn[standard]>=0.27",
]
client = [
  "openai>=1.0.0",
]

[project.scripts]
aic-vllm-proxy = "aic_vllm_proxy.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
